--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,50 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-title>
-      Blank
+      Hotel Booking
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-list>
+    <ion-item>
+      <ion-label floating>Location</ion-label>
+      <ion-input [(ngModel)]="location"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label floating>Check-in Date</ion-label>
+      <ion-datetime [(ngModel)]="checkInDate"></ion-datetime>
+    </ion-item>
+    <ion-item>
+      <ion-label floating>Check-out Date</ion-label>
+      <ion-datetime [(ngModel)]="checkOutDate"></ion-datetime>
+    </ion-item>
+    <ion-item>
+      <ion-label>Number of Guests</ion-label>
+      <ion-select [(ngModel)]="guests">
+        <ion-select-option value="1">1</ion-select-option>
+        <ion-select-option value="2">2</ion-select-option>
+        <ion-select-option value="3">3</ion-select-option>
+        <ion-select-option value="4">4</ion-select-option>
+      </ion-select>
+    </ion-item>
+  </ion-list>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-button expand="full" (click)="searchHotels()">Search Hotels</ion-button>
+
+  <ion-list *ngIf="hotels.length > 0">
+    <ion-item *ngFor="let hotel of hotels">
+      <ion-thumbnail slot="start">
+        <img src="{{ hotel.image }}">
+      </ion-thumbnail>
+      <ion-label>
+        <h2>{{ hotel.name }}</h2>
+        <p>{{ hotel.location }}</p>
+        <p>Price: {{ hotel.price }}</p>
+        <p>Rating: {{ hotel.rating }}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
+
